Fix default select styling on Safari.

--- a/styles.scss
+++ b/styles.scss
@@ -198,6 +198,15 @@ blockquote {
   }
 }
 
+_::-webkit-full-page-media, _:future, :root select {
+  // https://browserstrangeness.bitbucket.io/css_hacks.html#safari
+  -webkit-appearance: none;
+  background-image: url("./public/img/chevron-down.png") !important;
+  background-position: right 8px center;
+  background-repeat: no-repeat;
+  padding-right: 20px;
+}
+
 .Summary {
   @media screen and (max-width: $viewport-sm) {
     position: fixed;
